- Poppins and Dosis font updated - UI alignment issue fixes -

--- a/pricing-meter-frontEnd/src/app/Component/agent/register-step-five/register-step-five.component.scss
+++ b/pricing-meter-frontEnd/src/app/Component/agent/register-step-five/register-step-five.component.scss
@@ -20,7 +20,7 @@
     left: 595px;
     top: 505px;
     .info-txt {
-      font-family: Poppins;
+      font-family: Poppins-Regular;
       font-style: normal;
       font-weight: 600;
       font-size: 60px;
@@ -39,7 +39,7 @@
     background: #FFFFFF;
     border-radius: 100px;
     .greeding-txt{
-      font-family: Poppins;
+      font-family: Poppins-Regular;
       font-style: normal;
       font-weight: 500;
       font-size: 25px;
