--- a/pricing-meter-frontEnd/src/styles.scss
+++ b/pricing-meter-frontEnd/src/styles.scss
@@ -6,7 +6,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-Regular';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-Regular'), url('assets/fonts/Poppins/Poppins-Regular.otf') format('otf');
+  src: local('Poppins-Regular'), url('assets/fonts/Poppins/Poppins-Regular.woff') format('woff');
 }
 
 
@@ -14,7 +14,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-Italic'), url('assets/fonts/Poppins/Poppins-Italic.otf') format('otf');
+  src: local('Poppins-Italic'), url('assets/fonts/Poppins/Poppins-Italic.woff') format('woff');
 }
 
 
@@ -22,7 +22,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-Thin';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-Thin'), url('assets/fonts/Poppins/Poppins-Thin.otf') format('otf');
+  src: local('Poppins-Thin'), url('assets/fonts/Poppins/Poppins-Thin.woff') format('woff');
 }
 
 
@@ -30,7 +30,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-ThinItalic';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-ThinItalic'), url('assets/fonts/Poppins/Poppins-ThinItalic.otf') format('otf');
+  src: local('Poppins-ThinItalic'), url('assets/fonts/Poppins/Poppins-ThinItalic.woff') format('woff');
 }
 
 
@@ -38,7 +38,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-ExtraLight';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-ExtraLight'), url('assets/fonts/Poppins/Poppins-ExtraLight.otf') format('otf');
+  src: local('Poppins-ExtraLight'), url('assets/fonts/Poppins/Poppins-ExtraLight.woff') format('woff');
 }
 
 
@@ -46,7 +46,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-ExtraLightItalic';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-ExtraLightItalic'), url('assets/fonts/Poppins/Poppins-ExtraLightItalic.otf') format('otf');
+  src: local('Poppins-ExtraLightItalic'), url('assets/fonts/Poppins/Poppins-ExtraLightItalic.woff') format('woff');
 }
 
 
@@ -54,7 +54,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-Light';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-Light'), url('assets/fonts/Poppins/Poppins-Light.otf') format('otf');
+  src: local('Poppins-Light'), url('assets/fonts/Poppins/Poppins-Light.woff') format('woff');
 }
 
 
@@ -62,7 +62,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-LightItalic';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-LightItalic'), url('assets/fonts/Poppins/Poppins-LightItalic.otf') format('otf');
+  src: local('Poppins-LightItalic'), url('assets/fonts/Poppins/Poppins-LightItalic.woff') format('woff');
 }
 
 
@@ -70,7 +70,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-Medium';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-Medium'), url('assets/fonts/Poppins/Poppins-Medium.otf') format('otf');
+  src: local('Poppins-Medium'), url('assets/fonts/Poppins/Poppins-Medium.woff') format('woff');
 }
 
 
@@ -78,7 +78,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-MediumItalic';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-MediumItalic'), url('assets/fonts/Poppins/Poppins-MediumItalic.otf') format('otf');
+  src: local('Poppins-MediumItalic'), url('assets/fonts/Poppins/Poppins-MediumItalic.woff') format('woff');
 }
 
 
@@ -86,7 +86,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-SemiBold';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-SemiBold'), url('assets/fonts/Poppins/Poppins-SemiBold.otf') format('otf');
+  src: local('Poppins-SemiBold'), url('assets/fonts/Poppins/Poppins-SemiBold.woff') format('woff');
 }
 
 
@@ -94,7 +94,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-SemiBoldItalic';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-SemiBoldItalic'), url('assets/fonts/Poppins/Poppins-SemiBoldItalic.otf') format('otf');
+  src: local('Poppins-SemiBoldItalic'), url('assets/fonts/Poppins/Poppins-SemiBoldItalic.woff') format('woff');
 }
 
 
@@ -102,7 +102,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-Bold';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-Bold'), url('assets/fonts/Poppins/Poppins-Bold.otf') format('otf');
+  src: local('Poppins-Bold'), url('assets/fonts/Poppins/Poppins-Bold.woff') format('woff');
 }
 
 
@@ -110,7 +110,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-BoldItalic';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-BoldItalic'), url('assets/fonts/Poppins/Poppins-BoldItalic.otf') format('otf');
+  src: local('Poppins-BoldItalic'), url('assets/fonts/Poppins/Poppins-BoldItalic.woff') format('woff');
 }
 
 
@@ -118,7 +118,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-ExtraBold';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-ExtraBold'), url('assets/fonts/Poppins/Poppins-ExtraBold.otf') format('otf');
+  src: local('Poppins-ExtraBold'), url('assets/fonts/Poppins/Poppins-ExtraBold.woff') format('woff');
 }
 
 
@@ -126,7 +126,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-ExtraBoldItalic';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins ExtraBold Italic'), url('assets/fonts/Poppins/Poppins-ExtraBoldItalic.otf') format('otf');
+  src: local('Poppins ExtraBold Italic'), url('assets/fonts/Poppins/Poppins-ExtraBoldItalic.woff') format('woff');
 }
 
 
@@ -134,7 +134,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-Black';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-Black'), url('assets/fonts/Poppins/Poppins-Black.otf') format('otf');
+  src: local('Poppins-Black'), url('assets/fonts/Poppins/Poppins-Black.woff') format('woff');
 }
 
 
@@ -142,12 +142,27 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-family: 'Poppins-BlackItalic';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins-BlackItalic'), url('assets/fonts/Poppins/Poppins-BlackItalic.otf') format('otf');
+  src: local('Poppins-BlackItalic'), url('assets/fonts/Poppins/Poppins-BlackItalic.woff') format('woff');
 }
+
 button {
   cursor: pointer;
 
   &:focus {
     outline: none;
   }
+}
+
+/* dosis-regular - latin */
+@font-face {
+  font-family: 'Dosis';
+  font-style: normal;
+  font-weight: 400;
+  src: url('assets/fonts/dosis-v18-latin/dosis-v18-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+  url('assets/fonts/dosis-v18-latin/dosis-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('assets/fonts/dosis-v18-latin/dosis-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('assets/fonts/dosis-v18-latin/dosis-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('assets/fonts/dosis-v18-latin/dosis-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('assets/fonts/dosis-v18-latin/dosis-v18-latin-regular.svg#Dosis') format('svg'); /* Legacy iOS */
 }
